--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.13.2",
     "stylus-loader": "^3.0.2",
+    "stylus": "0.52.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
